# sketchbox

./: .gitignore  README.md  pyproject.toml
examples/: demo.py
sketchbox/: __init__.py  bloom.py  countmin.py  hashing.py  hyperloglog.py
tests/: test_sketchbox.py
