[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sketchbox"
version = "0.1.0"
description = "Probabilistic data structures from scratch — Bloom filter, Count-Min Sketch, and HyperLogLog. Massive data, tiny memory."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Bhupendra Gurjar", email = "bgurjar05.bg@gmail.com" }]
keywords = ["bloom-filter", "count-min-sketch", "hyperloglog", "probabilistic", "streaming", "algorithms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/bhupendra05/sketchbox"

[tool.pytest.ini_options]
testpaths = ["tests"]
